--- a/app/views/reports/_my-reports.html.erb
+++ b/app/views/reports/_my-reports.html.erb
@@ -60,7 +60,6 @@
   <a class="btn btn-success" id="snap-shot-btn">finish</a>
 </section>
 
-
 <input type="hidden" id="report-story-type-hidden">
 
 <div class="back-pop report_center_back_pop" id='back-pop'>
@@ -105,6 +104,7 @@
       <a class="btn btn-primary" id="create-add-to-storyset">Create and Add</a>
     </div>
   </div>
+</div>
 </div>
 
 <% content_for :javascript_includes do %>
@@ -205,7 +205,7 @@
     $('#pop-crate').click(function () {
         $('#report-menu').fadeToggle(0);
     })
-    
+
       var loading;
         function loading_show() {
             loading = new SVGLoader(document.getElementById('preloader'), {speedIn: 100});
@@ -220,6 +220,10 @@
             $('<div id="preloader" class="pageload-overlay" data-opening="M20,15 50,30 50,30 30,30 Z;M0,0 80,0 50,30 20,45 Z;M0,0 80,0 60,45 0,60 Z;M0,0 80,0 80,60 0,60 Z" data-closing="M0,0 80,0 60,45 0,60 Z;M0,0 80,0 50,30 20,45 Z;M20,15 50,30 50,30 30,30 Z;M30,30 50,30 50,30 30,30 Z"><svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 80 60" preserveAspectRatio="none"><path d="M30,30 50,30 50,30 30,30 Z"/></svg></div>').appendTo('body').ready(function () {
             })
         }
-</script>
 
-</div>
+    // function refersh(){
+    //   window.location.reload();
+    // }
+
+    // window.setTimeout('refersh()',20000);    
+</script>
