--- a/app/views/production_plans/import.html.erb
+++ b/app/views/production_plans/import.html.erb
@@ -3,6 +3,13 @@
 </p>
 <h3>上传导入生产计划</h3>
 <div>
+  选择生产线:
+  <select id="product-line-select" style="min-width: 200px;text-align: center;" onchange="set_product_line()">
+    <option value="滚筒总装线">滚筒总装线</option>
+    <option value="波轮生产线">波轮生产线</option>
+  </select>
+</div>
+<div>
   选择数据文件：
   <input id="item-data-uploader" type="file" name="files[]" data-url="/production_plans/import"/>
 
@@ -13,7 +20,7 @@
 <div id="handle-dialog-modal">
   <div class="handle-dialog-modal-content">
     <p>
-      <img src="/assets/loading.gif" />&nbsp;&nbsp;处理中....
+      <img src="/assets/loading.gif"/>&nbsp;&nbsp;处理中....
     </p>
   </div>
 </div>
@@ -21,17 +28,8 @@
 <% content_for :javascript_includes do %>
     <%= javascript_include_tag "jquery.ui/jquery-ui-1.10.3.custom.min.js" %>
     <%= javascript_include_tag "jquery.file.upload/jquery.fileupload.js" %>
-<%end%>
+<% end %>
 <script type="text/javascript">
-//    function show_handle_dialog() {
-//        document.getElementById('handle-dialog-modal').style.display = 'block';
-//        document.getElementById('dialog-overlay').style.display = 'block';
-//    }
-//
-//    function hide_handle_dialog() {
-//        document.getElementById('handle-dialog-modal').style.display = 'none';
-//        document.getElementById('dialog-overlay').style.display = 'none';
-//    }
 
     function data_upload(idStr, format, callback) {
         var valid = true;
@@ -88,7 +86,12 @@
 
     $(document).ready(function () {
         data_upload("#item-data-uploader");
+        set_product_line();
     });
+        function set_product_line(){
+          var pl=$('#product-line-select').val();
+            $.post('/production_plans/set_product_line',{product_line:pl},function(){},'json');
+        }
 </script>
 <style rel="stylesheet" type="text/css">
     #dialog-overlay {
