loading show and hide

--- a/app/views/reports/_current-status.html.erb
+++ b/app/views/reports/_current-status.html.erb
@@ -26,27 +26,27 @@
     </div>
 
     <div class="col-sm-12">
-        <ul class="pull-right control-chart-interval-group">
-         <!--  <li interval="90">
-            <a>Hr</a>
-          </li> -->
-          <li interval="100" style="color:black;" datatype='true'>
-            <a>D</a>
-          </li>
-          <!-- <li interval="200">
-            <a>W</a>
-          </li> -->
-          <li interval="300">
-            <a>M</a>
-          </li>
-          <li interval="400">
-            <a>Qr</a>
-          </li>
-          <li interval="500">
-            <a>Y</a>
-          </li>
-        </ul>
-        <!-- <a class="pull-right btn btn-warning linear compare-current-btn">WorkingTime</a> -->
+      <ul class="pull-right control-chart-interval-group">
+        <!--  <li interval="90">
+           <a>Hr</a>
+         </li> -->
+        <li interval="100" style="color:black;" datatype='true'>
+          <a>D</a>
+        </li>
+        <!-- <li interval="200">
+          <a>W</a>
+        </li> -->
+        <li interval="300">
+          <a>M</a>
+        </li>
+        <li interval="400">
+          <a>Qr</a>
+        </li>
+        <li interval="500">
+          <a>Y</a>
+        </li>
+      </ul>
+      <!-- <a class="pull-right btn btn-warning linear compare-current-btn">WorkingTime</a> -->
     </div>
     <div id="data_container" class="data-container"></div>
   </section>
@@ -108,31 +108,36 @@
 
 <script>
     $(document).ready(function () {
-        $('.control-chart-interval-group li').each(function(index){
-            $(this).click(function(){
-                $('.control-chart-interval-group li').css({color:'black',opacity:'0.3'});
-                $('.control-chart-interval-group li').attr('datatype','false');
+        $('.control-chart-interval-group li').each(function (index) {
+            $(this).click(function () {
+                $('.control-chart-interval-group li').css({color: 'black', opacity: '0.3'});
+                $('.control-chart-interval-group li').attr('datatype', 'false');
 
-                $(this).css({opacity:'1'});
-                $(this).attr('datatype','true');
+                loading_show();
+                $(this).css({opacity: '1'});
+                $(this).attr('datatype', 'true');
 
                 // console.log($(this).attr('interval'));
                 // console.log($('#vehicle-select').val());
 
-                var Choose_Interval_Code=$(this).attr('interval');
-                var ProductLine=$('#vehicle-select').val();
+                var Choose_Interval_Code = $(this).attr('interval');
+                var ProductLine = $('#vehicle-select').val();
                 $.ajax({
-                    url:'/departments/entity_groups',
-                    type:'get',
-                    data:{
-                        interval:Choose_Interval_Code,
-                        product_line:ProductLine
+                    url: '/departments/entity_groups',
+                    type: 'get',
+                    data: {
+                        interval: Choose_Interval_Code,
+                        product_line: ProductLine
                     },
-                    success:function(data){
+                    success: function (data) {
                         console.log(data);
                         //Here can do something
+                        console.log('data====');
+                        console.log(data);
+                        console.log('data====');
+                        loading_hide();
                     },
-                    error:function(){
+                    error: function () {
                         console.log("Error");
                     }
                 });
@@ -157,14 +162,14 @@
 
     function loadData() {
         var productLine = $('#vehicle-select').val();
-        var datatype=100;
+        var datatype = 100;
 
-        $('.control-chart-interval-group li').each(function(index){
-            if($(this).attr('datatype')=='true'){
-                datatype=$(this).attr('interval');
+        $('.control-chart-interval-group li').each(function (index) {
+            if ($(this).attr('datatype') == 'true') {
+                datatype = $(this).attr('interval');
             }
-        })
-        
+        });
+
         console.log(productLine);
         loading_show();
 
@@ -198,13 +203,13 @@
     $("#vehicle-select").change(function () {
         loadData();
     });
-    try{
+    try {
         window.clearInterval(loadChartDataIntervalValue);
-    }catch(e){
+    } catch (e) {
         console.log(e);
     }
-    var loadDataIntervalValue=window.setInterval("loadData()", 20000);
-    
+    var loadDataIntervalValue = window.setInterval("loadData()", 20000);
+
     /*双击事件*/
     function double_click() {
         window.location.href = 'kpi_entries/analyse?view=' + $(this).children('div');
